# mersal

./: .gitignore  .pre-commit-config.yaml  CNAME  Makefile  README.rst  mise.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
core/tests/: profile_results
docs/: conf.py  glossary.rst  index.rst
docs/_static/: versions.json
docs/examples/: pyproject.toml
docs/examples/src/mersal_docs/outbox/: outbox_sqlalchemy_example.py
docs/examples/src/mersal_docs/unit_of_work/: unit_of_work_sqlalchemy_example.py
docs/examples/tests/outbox/: test_using_sqlalchemy.py
docs/examples/tests/unit_of_work/: test_using_sqlalchemy.py
docs/reference/: activation.rst  app.rst  autosubscribe.rst  idempotency.rst  index.rst  outbox.rst  persistence.rst  subscription.rst  threading.rst  topic.rst  transport.rst  unit_of_work.rst
docs/usage/: app.rst  error_handling.rst  handlers.rst  idempotency.rst  index.rst  message_context.rst  message_headers.rst  outbox.rst  pipeline.rst  plugins.rst  pub_sub.rst  publishing.rst  receiving.rst  routing.rst  sending.rst  subscribing.rst  transactions.rst  transport_bridge.rst  unit_of_work.rst  workers.rst
mersal/: __init__.py  app.py
mersal/_activation/: builtin_handler_activator.py
mersal/activation/: __init__.py
mersal/configuration/: default_plugin.py  dependency_resolver.py  standard_configurator.py
mersal/idempotency/: idempotency_checker_step.py
mersal/logging/: __init__.py  config.py  logger.py  null_logger.py  standard_plugin.py
mersal/messages/: logical_message.py  message_headers.py  (+1 more)
tests/: test_default_configurator.py
tools/: build_docs.py
(+85 files in other folders)
