[project]
name = "mersal-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Abdulhaq Emhemmed", email = "abdulhaq.emhemmed@gmail.com" }
]
dependencies = [
'mersal',
'sqlalchemy',
'mersal_msgspec',
'mersal_alchemy',
'mersal_polling',
'mersal_litestar',
]
readme = "README.md"
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "anyio",
    "trio",
]

[tool.uv]
managed = true

[tool.uv.sources]
mersal = { workspace = true }
mersal_polling = { workspace = true }
mersal_alchemy = { workspace = true }
mersal_litestar = { workspace = true }
mersal_msgspec = { workspace = true }
